tests/build/cases/widget/name_conflict2.stderr
error[E0428]: the name `TestWidget` is defined multiple times
 --> cases/widget/name_conflict2.rs:6:1
  |
3 | #[widget($crate::TestWidget)]
  | ----------------------------- previous definition of the type `TestWidget` here
...
6 | #[widget($crate::TestWidget)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `TestWidget` redefined here
  |
  = note: `TestWidget` must be defined only once in the type namespace of this module
  = note: this error originates in the attribute macro `widget` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0428]: the name `_TestWidget__` is defined multiple times
 --> cases/widget/name_conflict2.rs:6:1
  |
3 | #[widget($crate::TestWidget)]
  | ----------------------------- previous definition of the macro `_TestWidget__` here
...
6 | #[widget($crate::TestWidget)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `_TestWidget__` redefined here
  |
  = note: `_TestWidget__` must be defined only once in the macro namespace of this module
  = note: this error originates in the attribute macro `widget` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0428]: the name `zzz_widget_path__TestWidget` is defined multiple times
 --> cases/widget/name_conflict2.rs:6:18
  |
3 | #[widget($crate::TestWidget)]
  |                  ---------- previous definition of the module `zzz_widget_path__TestWidget` here
...
6 | #[widget($crate::TestWidget)]
  |                  ^^^^^^^^^^ `zzz_widget_path__TestWidget` redefined here
  |
  = note: `zzz_widget_path__TestWidget` must be defined only once in the type namespace of this module

error[E0659]: `_TestWidget__` is ambiguous
 --> cases/widget/name_conflict2.rs:6:1
  |
6 | #[widget($crate::TestWidget)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ ambiguous name
  |
  = note: ambiguous because of multiple potential import sources
note: `_TestWidget__` could refer to the macro defined here
 --> cases/widget/name_conflict2.rs:6:1
  |
6 | #[widget($crate::TestWidget)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: `_TestWidget__` could also refer to the macro defined here
 --> cases/widget/name_conflict2.rs:3:1
  |
3 | #[widget($crate::TestWidget)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  = note: this error originates in the attribute macro `widget` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0119]: conflicting implementations of trait `Deref` for type `TestWidget`
 --> cases/widget/name_conflict2.rs:6:1
  |
3 | #[widget($crate::TestWidget)]
  | ----------------------------- first implementation here
...
6 | #[widget($crate::TestWidget)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ conflicting implementation for `TestWidget`
  |
  = note: this error originates in the attribute macro `widget` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0119]: conflicting implementations of trait `DerefMut` for type `TestWidget`
 --> cases/widget/name_conflict2.rs:6:1
  |
3 | #[widget($crate::TestWidget)]
  | ----------------------------- first implementation here
...
6 | #[widget($crate::TestWidget)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ conflicting implementation for `TestWidget`
  |
  = note: this error originates in the attribute macro `widget` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0119]: conflicting implementations of trait `zero_ui::prelude::new_widget::WidgetImpl` for type `TestWidget`
 --> cases/widget/name_conflict2.rs:6:1
  |
3 | #[widget($crate::TestWidget)]
  | ----------------------------- first implementation here
...
6 | #[widget($crate::TestWidget)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ conflicting implementation for `TestWidget`
  |
  = note: this error originates in the attribute macro `widget` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0592]: duplicate definitions with name `widget_new`
 --> cases/widget/name_conflict2.rs:3:1
  |
3 | #[widget($crate::TestWidget)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ duplicate definitions for `widget_new`
...
6 | #[widget($crate::TestWidget)]
  | ----------------------------- other definition for `widget_new`
  |
  = note: this error originates in the attribute macro `widget` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0592]: duplicate definitions with name `widget_type`
 --> cases/widget/name_conflict2.rs:3:1
  |
3 | #[widget($crate::TestWidget)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ duplicate definitions for `widget_type`
...
6 | #[widget($crate::TestWidget)]
  | ----------------------------- other definition for `widget_type`
  |
  = note: this error originates in the attribute macro `widget` (in Nightly builds, run with -Z macro-backtrace for more info)
